# finance-tracker-app

./: APK_BUILD_PLAN.md  Procfile  README.md  STRUCTURE.md  TODO.md  pyproject.toml  requirements.txt
backend/: .env  .env.example  app.py  config.py  loan_system_schema.sql  requirements.txt  supabase_schema.sql
backend/routes/: ai_routes.py  auth_routes.py  dashboard_routes.py  loan_contacts_routes.py  loan_routes.py  transaction_routes.py
backend/services/: ai_service.py  supabase_service.py
backend/utils/: jwt_handler.py
finance_tracker_app/: pubspec.yaml
finance_tracker_app/lib/: main.dart
finance_tracker_app/lib/models/: loan.dart  loan_activity.dart  loan_contact.dart  transaction.dart  user.dart
finance_tracker_app/lib/providers/: auth_provider.dart  category_provider.dart  dashboard_provider.dart  loan_contacts_provider.dart  loan_provider.dart  theme_provider.dart  transaction_provider.dart
finance_tracker_app/lib/routes/: app_router.dart
finance_tracker_app/lib/screens/: add_loan_screen.dart  add_transaction_screen.dart  ai_assistant_screen.dart  analytics_screen.dart  dashboard_screen.dart  loan_contact_detail_screen.dart  loan_contacts_screen.dart  loan_list_screen.dart  login_screen.dart  profile_screen.dart  signup_screen.dart  splash_screen.dart  transaction_history_screen.dart
finance_tracker_app/lib/services/: api_service.dart  auth_service.dart
finance_tracker_app/lib/utils/: constants.dart  formatters.dart
finance_tracker_app/lib/widgets/: glass_card.dart  loading_overlay.dart
finance_tracker_app/test/: widget_test.dart
(+2 files in other folders)
