[tool.poetry]
name = "finance-tracker-backend"
version = "1.0.0"
description = "Finance Tracker Backend API"
authors = ["Your Name"]

[tool.poetry.dependencies]
python = "^3.11"
flask = "3.0.0"
flask-cors = "4.0.0"
supabase = "2.0.2"
python-dotenv = "1.0.0"
pyjwt = "2.8.0"
gunicorn = "21.2.0"
pydantic = "2.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

